force-app/main/default/objects/Payment__c/fields/Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods__c</fullName>
    <label>Payment Methods</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>